clusters/my-cluster/infrastucture/keycloak/kk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      nodeSelector:
        kubernetes.io/hostname: masterlocal
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:25.0.4
        args: ["start"]
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: certs
            mountPath: /cert

      volumes:
      - name: certs
        sercret:
          name: tlss-secret
