clusters/my-cluster/infrastucture/keycloak/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-lb
spec:
  ports:
  - port: 443
    targetPort: 8080
  # - port: 80
  #   name: http
  #   targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
