clusters/my-cluster/infrastucture/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kk-to-face
  # annotations:
    # cert-manager.io/issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: komplikter-sub1.servehttp.com
      http:
        paths:
          - path: /kk
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
